--- a/public/partials/principal.html
+++ b/public/partials/principal.html
@@ -5,7 +5,12 @@
 <div class="row">
     <div class="col-md-12">
         <form>
-            <input class="form-control" placeholder="filtrar" ng-model="filtro" ng-model-options="{debounce:500}"></input>
+        	<div class="input-group">
+        		<span class="input-group-btn">
+        			<a href="fotos/new" class="btn btn-primary">Nova foto</a>
+        		</span>
+            	<input class="form-control" placeholder="filtrar" ng-model="filtro" ng-model-options="{debounce:500}"></input>
+        	</div>
         </form>
     </div>
 </div>
